# rag-pipeline-demo-

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/agent/: __init__.py  chat_agent.py  config.py
src/api/: __init__.py  app.py  chat.py  routes.py
src/models/: __init__.py  schemas.py
src/parsing/: __init__.py  pdf_parser.py
src/ui/: __init__.py  chat_page.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_chat_streaming.py  test_upload.py
tests/unit/: __init__.py  test_agent.py  test_pdf_parser.py
