[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Retrieval-Augmented Generation chatbot for intelligent document Q&A with FastAPI, Agno, and NiceGUI"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "agno",
    "nicegui",
    "pypdf",
    "python-dotenv",
    "pydantic",
    "httpx",
    "sqlalchemy",
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-check = "*"
pytest-asyncio = "*"
ruff = "*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
